// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: CustomButton should match snapshot 1`] = `
<RNGestureHandlerButton
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  activeOpacity={0.105}
  collapsable={false}
  delayLongPress={600}
  enabled={true}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  innerRef={null}
  onActiveStateChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onPress={[Function]}
  style={
    [
      {
        "backgroundColor": "purple",
        "borderRadius": 14,
        "height": 48,
        "justifyContent": "center",
        "marginBottom": 12,
        "padding": 10,
        "paddingHorizontal": 16,
      },
      {
        "cursor": undefined,
      },
    ]
  }
  testID="testButton"
  underlayColor="black"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "black",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": 14,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <Text
    style={
      [
        {
          "color": "yellow",
          "fontSize": 18,
        },
        {
          "backgroundColor": "transparent",
          "fontFamily": "Inter",
          "fontWeight": "700",
          "textAlign": "center",
        },
        [
          {
            "textAlign": "left",
          },
        ],
      ]
    }
  >
    Press me!
  </Text>
</RNGestureHandlerButton>
`;

exports[`Story Snapshots: DisabledButton should match snapshot 1`] = `
<RNGestureHandlerButton
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  activeOpacity={0.105}
  collapsable={false}
  delayLongPress={600}
  enabled={false}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  innerRef={null}
  onActiveStateChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onPress={[Function]}
  style={
    [
      {
        "backgroundColor": "#EAE1CB",
        "borderRadius": 14,
        "height": 48,
        "justifyContent": "center",
        "marginBottom": 12,
        "paddingHorizontal": 16,
      },
      {
        "cursor": undefined,
      },
    ]
  }
  testID="testButton"
  underlayColor="black"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "black",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": 14,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <Text
    style={
      [
        {
          "color": "#A39C86",
          "fontSize": 16,
        },
        {
          "backgroundColor": "transparent",
          "fontFamily": "Inter",
          "fontWeight": "700",
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    Press me!
  </Text>
</RNGestureHandlerButton>
`;

exports[`Story Snapshots: DisabledLoadingButton should match snapshot 1`] = `
<RNGestureHandlerButton
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  activeOpacity={0.105}
  collapsable={false}
  delayLongPress={600}
  enabled={false}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  innerRef={null}
  onActiveStateChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onPress={[Function]}
  style={
    [
      {
        "backgroundColor": "#EAE1CB",
        "borderRadius": 14,
        "height": 48,
        "justifyContent": "center",
        "marginBottom": 12,
        "paddingHorizontal": 16,
      },
      {
        "cursor": undefined,
      },
    ]
  }
  testID="testButton"
  underlayColor="black"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "black",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": 14,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "padding": 16,
        },
        undefined,
        {
          "padding": 0,
        },
      ]
    }
  >
    <View
      accessibilityRole="progressbar"
      collapsable={false}
      pointerEvents="none"
      style={
        {
          "alignItems": "center",
          "height": 31,
          "justifyContent": "center",
          "opacity": 1,
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 32,
        }
      }
    >
      <RNCMaskedView
        style={
          {
            "height": 31,
            "width": 32,
          }
        }
      >
        <View
          pointerEvents="none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Image
            resizeMode="contain"
            source="test-file-stub"
            style={
              {
                "height": 31,
                "width": 32,
              }
            }
          />
        </View>
        <View
          style={
            [
              {
                "height": 31,
                "width": 32,
              },
              {
                "backgroundColor": "#0B3A1C",
              },
            ]
          }
        />
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#22C25C",
              "bottom": 0,
              "left": 0,
              "opacity": 0.3,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#B8FFCF",
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          pointerEvents="none"
          style={
            {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            pointerEvents="none"
            style={
              {
                "height": 48,
                "opacity": 0,
                "position": "absolute",
                "transform": [
                  {
                    "scale": 2.05,
                  },
                ],
                "width": 48,
              }
            }
          >
            <RNSVGSvgView
              bbHeight={48}
              bbWidth={48}
              focusable={false}
              height={48}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": 48,
                    "width": 48,
                  },
                ]
              }
              width={48}
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGDefs>
                  <RNSVGRadialGradient
                    cx="50%"
                    cy="50%"
                    fx="50%"
                    fy="50%"
                    gradient={
                      [
                        0.14,
                        4647810,
                        0.19,
                        1197142166,
                        0.24,
                        -1940852596,
                        0.27,
                        -12784776,
                        0.295,
                        -4653105,
                        0.315,
                        -9699422,
                        0.34,
                        -229576564,
                        0.39,
                        3331945,
                      ]
                    }
                    gradientTransform={null}
                    gradientUnits={0}
                    name="ripple0"
                    rx="50%"
                    ry="50%"
                  />
                </RNSVGDefs>
                <RNSVGRect
                  fill={
                    {
                      "brushRef": "ripple0",
                      "type": 1,
                    }
                  }
                  height="100%"
                  propList={
                    [
                      "fill",
                    ]
                  }
                  width="100%"
                  x="0"
                  y="0"
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
          <View
            collapsable={false}
            pointerEvents="none"
            style={
              {
                "height": 48,
                "opacity": 0,
                "position": "absolute",
                "transform": [
                  {
                    "scale": 2.05,
                  },
                ],
                "width": 48,
              }
            }
          >
            <RNSVGSvgView
              bbHeight={48}
              bbWidth={48}
              focusable={false}
              height={48}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": 48,
                    "width": 48,
                  },
                ]
              }
              width={48}
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGDefs>
                  <RNSVGRadialGradient
                    cx="50%"
                    cy="50%"
                    fx="50%"
                    fy="50%"
                    gradient={
                      [
                        0.14,
                        4647810,
                        0.19,
                        1197142166,
                        0.24,
                        -1940852596,
                        0.27,
                        -12784776,
                        0.295,
                        -4653105,
                        0.315,
                        -9699422,
                        0.34,
                        -229576564,
                        0.39,
                        3331945,
                      ]
                    }
                    gradientTransform={null}
                    gradientUnits={0}
                    name="ripple430"
                    rx="50%"
                    ry="50%"
                  />
                </RNSVGDefs>
                <RNSVGRect
                  fill={
                    {
                      "brushRef": "ripple430",
                      "type": 1,
                    }
                  }
                  height="100%"
                  propList={
                    [
                      "fill",
                    ]
                  }
                  width="100%"
                  x="0"
                  y="0"
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
          <View
            collapsable={false}
            pointerEvents="none"
            style={
              {
                "height": 48,
                "opacity": 0,
                "position": "absolute",
                "transform": [
                  {
                    "scale": 2.05,
                  },
                ],
                "width": 48,
              }
            }
          >
            <RNSVGSvgView
              bbHeight={48}
              bbWidth={48}
              focusable={false}
              height={48}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": 48,
                    "width": 48,
                  },
                ]
              }
              width={48}
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGDefs>
                  <RNSVGRadialGradient
                    cx="50%"
                    cy="50%"
                    fx="50%"
                    fy="50%"
                    gradient={
                      [
                        0.14,
                        4647810,
                        0.19,
                        1197142166,
                        0.24,
                        -1940852596,
                        0.27,
                        -12784776,
                        0.295,
                        -4653105,
                        0.315,
                        -9699422,
                        0.34,
                        -229576564,
                        0.39,
                        3331945,
                      ]
                    }
                    gradientTransform={null}
                    gradientUnits={0}
                    name="ripple870"
                    rx="50%"
                    ry="50%"
                  />
                </RNSVGDefs>
                <RNSVGRect
                  fill={
                    {
                      "brushRef": "ripple870",
                      "type": 1,
                    }
                  }
                  height="100%"
                  propList={
                    [
                      "fill",
                    ]
                  }
                  width="100%"
                  x="0"
                  y="0"
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
        </View>
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#FFFFFF",
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </RNCMaskedView>
    </View>
  </View>
</RNGestureHandlerButton>
`;

exports[`Story Snapshots: LoadingButton should match snapshot 1`] = `
<RNGestureHandlerButton
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  activeOpacity={0.105}
  collapsable={false}
  delayLongPress={600}
  enabled={false}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  innerRef={null}
  onActiveStateChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onPress={[Function]}
  style={
    [
      {
        "backgroundColor": "#EAE1CB",
        "borderRadius": 14,
        "height": 48,
        "justifyContent": "center",
        "marginBottom": 12,
        "paddingHorizontal": 16,
      },
      {
        "cursor": undefined,
      },
    ]
  }
  testID="testButton"
  underlayColor="black"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "black",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": 14,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "padding": 16,
        },
        undefined,
        {
          "padding": 0,
        },
      ]
    }
  >
    <View
      accessibilityRole="progressbar"
      collapsable={false}
      pointerEvents="none"
      style={
        {
          "alignItems": "center",
          "height": 31,
          "justifyContent": "center",
          "opacity": 1,
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 32,
        }
      }
    >
      <RNCMaskedView
        style={
          {
            "height": 31,
            "width": 32,
          }
        }
      >
        <View
          pointerEvents="none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Image
            resizeMode="contain"
            source="test-file-stub"
            style={
              {
                "height": 31,
                "width": 32,
              }
            }
          />
        </View>
        <View
          style={
            [
              {
                "height": 31,
                "width": 32,
              },
              {
                "backgroundColor": "#0B3A1C",
              },
            ]
          }
        />
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#22C25C",
              "bottom": 0,
              "left": 0,
              "opacity": 0.3,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#B8FFCF",
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          pointerEvents="none"
          style={
            {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            pointerEvents="none"
            style={
              {
                "height": 48,
                "opacity": 0,
                "position": "absolute",
                "transform": [
                  {
                    "scale": 2.05,
                  },
                ],
                "width": 48,
              }
            }
          >
            <RNSVGSvgView
              bbHeight={48}
              bbWidth={48}
              focusable={false}
              height={48}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": 48,
                    "width": 48,
                  },
                ]
              }
              width={48}
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGDefs>
                  <RNSVGRadialGradient
                    cx="50%"
                    cy="50%"
                    fx="50%"
                    fy="50%"
                    gradient={
                      [
                        0.14,
                        4647810,
                        0.19,
                        1197142166,
                        0.24,
                        -1940852596,
                        0.27,
                        -12784776,
                        0.295,
                        -4653105,
                        0.315,
                        -9699422,
                        0.34,
                        -229576564,
                        0.39,
                        3331945,
                      ]
                    }
                    gradientTransform={null}
                    gradientUnits={0}
                    name="ripple0"
                    rx="50%"
                    ry="50%"
                  />
                </RNSVGDefs>
                <RNSVGRect
                  fill={
                    {
                      "brushRef": "ripple0",
                      "type": 1,
                    }
                  }
                  height="100%"
                  propList={
                    [
                      "fill",
                    ]
                  }
                  width="100%"
                  x="0"
                  y="0"
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
          <View
            collapsable={false}
            pointerEvents="none"
            style={
              {
                "height": 48,
                "opacity": 0,
                "position": "absolute",
                "transform": [
                  {
                    "scale": 2.05,
                  },
                ],
                "width": 48,
              }
            }
          >
            <RNSVGSvgView
              bbHeight={48}
              bbWidth={48}
              focusable={false}
              height={48}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": 48,
                    "width": 48,
                  },
                ]
              }
              width={48}
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGDefs>
                  <RNSVGRadialGradient
                    cx="50%"
                    cy="50%"
                    fx="50%"
                    fy="50%"
                    gradient={
                      [
                        0.14,
                        4647810,
                        0.19,
                        1197142166,
                        0.24,
                        -1940852596,
                        0.27,
                        -12784776,
                        0.295,
                        -4653105,
                        0.315,
                        -9699422,
                        0.34,
                        -229576564,
                        0.39,
                        3331945,
                      ]
                    }
                    gradientTransform={null}
                    gradientUnits={0}
                    name="ripple430"
                    rx="50%"
                    ry="50%"
                  />
                </RNSVGDefs>
                <RNSVGRect
                  fill={
                    {
                      "brushRef": "ripple430",
                      "type": 1,
                    }
                  }
                  height="100%"
                  propList={
                    [
                      "fill",
                    ]
                  }
                  width="100%"
                  x="0"
                  y="0"
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
          <View
            collapsable={false}
            pointerEvents="none"
            style={
              {
                "height": 48,
                "opacity": 0,
                "position": "absolute",
                "transform": [
                  {
                    "scale": 2.05,
                  },
                ],
                "width": 48,
              }
            }
          >
            <RNSVGSvgView
              bbHeight={48}
              bbWidth={48}
              focusable={false}
              height={48}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": 48,
                    "width": 48,
                  },
                ]
              }
              width={48}
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGDefs>
                  <RNSVGRadialGradient
                    cx="50%"
                    cy="50%"
                    fx="50%"
                    fy="50%"
                    gradient={
                      [
                        0.14,
                        4647810,
                        0.19,
                        1197142166,
                        0.24,
                        -1940852596,
                        0.27,
                        -12784776,
                        0.295,
                        -4653105,
                        0.315,
                        -9699422,
                        0.34,
                        -229576564,
                        0.39,
                        3331945,
                      ]
                    }
                    gradientTransform={null}
                    gradientUnits={0}
                    name="ripple870"
                    rx="50%"
                    ry="50%"
                  />
                </RNSVGDefs>
                <RNSVGRect
                  fill={
                    {
                      "brushRef": "ripple870",
                      "type": 1,
                    }
                  }
                  height="100%"
                  propList={
                    [
                      "fill",
                    ]
                  }
                  width="100%"
                  x="0"
                  y="0"
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
        </View>
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#FFFFFF",
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </RNCMaskedView>
    </View>
  </View>
</RNGestureHandlerButton>
`;

exports[`Story Snapshots: PrimaryButton should match snapshot 1`] = `
<RNGestureHandlerButton
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  activeOpacity={0.105}
  collapsable={false}
  delayLongPress={600}
  enabled={true}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  innerRef={null}
  onActiveStateChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onPress={[Function]}
  style={
    [
      {
        "backgroundColor": "#175F35",
        "borderRadius": 14,
        "height": 48,
        "justifyContent": "center",
        "marginBottom": 12,
        "paddingHorizontal": 16,
        "shadowColor": "#175F35",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.28,
        "shadowRadius": 8,
      },
      {
        "cursor": undefined,
      },
    ]
  }
  testID="testButton"
  underlayColor="black"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "black",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": 14,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <Text
    style={
      [
        {
          "color": "#FFFFFF",
          "fontSize": 16,
        },
        {
          "backgroundColor": "transparent",
          "fontFamily": "Inter",
          "fontWeight": "700",
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    Press me!
  </Text>
</RNGestureHandlerButton>
`;

exports[`Story Snapshots: SecondaryButton should match snapshot 1`] = `
<RNGestureHandlerButton
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  activeOpacity={0.105}
  collapsable={false}
  delayLongPress={600}
  enabled={true}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  innerRef={null}
  onActiveStateChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onPress={[Function]}
  style={
    [
      {
        "backgroundColor": "#FFFDF6",
        "borderColor": "#E4D8BC",
        "borderRadius": 14,
        "borderWidth": 1.5,
        "height": 48,
        "justifyContent": "center",
        "marginBottom": 12,
        "paddingHorizontal": 16,
      },
      {
        "cursor": undefined,
      },
    ]
  }
  testID="testButton"
  underlayColor="black"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "black",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": 14,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <Text
    style={
      [
        {
          "color": "#3B382E",
          "fontSize": 16,
        },
        {
          "backgroundColor": "transparent",
          "fontFamily": "Inter",
          "fontWeight": "700",
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    Press me!
  </Text>
</RNGestureHandlerButton>
`;

exports[`Story Snapshots: SmallButton should match snapshot 1`] = `
<RNGestureHandlerButton
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  activeOpacity={0.105}
  collapsable={false}
  delayLongPress={600}
  enabled={true}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  innerRef={null}
  onActiveStateChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onPress={[Function]}
  style={
    [
      {
        "alignSelf": "center",
        "backgroundColor": "#175F35",
        "borderRadius": 14,
        "marginBottom": 12,
        "paddingHorizontal": 12,
        "paddingVertical": 8,
        "shadowColor": "#175F35",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.28,
        "shadowRadius": 8,
      },
      {
        "cursor": undefined,
      },
    ]
  }
  testID="testButton"
  underlayColor="black"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "black",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": 14,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <Text
    style={
      [
        {
          "color": "#FFFFFF",
          "fontSize": 16,
        },
        {
          "backgroundColor": "transparent",
          "fontFamily": "Inter",
          "fontSize": 12,
          "fontWeight": "700",
          "lineHeight": 18,
          "textAlign": "left",
        },
        undefined,
      ]
    }
  >
    Press me!
  </Text>
</RNGestureHandlerButton>
`;
